--- a/index.html
+++ b/index.html
@@ -3,134 +3,191 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AiroPay Technologies</title>
+  <title>AiroPay Clone</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-    header { background: #005f73; color: #fff; position: fixed; width: 100%; top: 0; z-index: 1000; }
-    nav { display: flex; align-items: center; justify-content: space-between; padding: 1rem 2rem; }
-    .logo { font-size: 1.5rem; font-weight: bold; }
-    .nav-menu { list-style: none; display: flex; }
-    .nav-menu li a { color: #fff; text-decoration: none; padding: 0.75rem 1rem; display: block; }
-    .nav-menu li a:hover { background: #0a9396; border-radius: 4px; }
-    .nav-toggle-label { display: none; cursor: pointer; }
-    .nav-toggle-label span,
-    .nav-toggle-label span::before,
-    .nav-toggle-label span::after {
-      display: block; background: #fff; height: 2px; width: 25px; border-radius: 2px; position: relative;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
-    .nav-toggle-label span::before { content: ''; position: absolute; top: -8px; }
-    .nav-toggle-label span::after { content: ''; position: absolute; top: 8px; }
-    #nav-toggle { display: none; }
-
-    .hero { background: url('https://images.pexels.com/photos/30572289/pexels-photo-30572289.jpeg?cs=srgb&dl=pexels-jakubzerdzicki-30572289.jpg&fm=jpg') no-repeat center/cover; height: 100vh; display: flex; align-items: center; justify-content: center; text-align: center; padding: 0 2rem; }
-    .hero h1 { font-size: 2.5rem; color: #fff; margin-bottom: 1rem; }
-    .hero p { color: #e0f2f1; max-width: 700px; margin: 0 auto 1.5rem; }
-    .btn { background: #0a9396; color: #fff; padding: 0.75rem 1.5rem; text-decoration: none; border-radius: 4px; }
-    .btn:hover { background: #94d2bd; }
-
-    section { padding: 4rem 2rem; margin-top: 4rem; }
-    section h2 { text-align: center; margin-bottom: 2rem; color: #005f73; }
-    .services .service-container { display: flex; flex-wrap: wrap; justify-content: space-around; }
-    .service { flex: 1 1 250px; margin: 1rem; text-align: center; }
-    .service img { width: 100%; max-width: 300px; height: auto; border-radius: 8px; }
-    .service h3 { margin-top: 1rem; color: #0a9396; }
-    .service p { margin-top: 0.5rem; }
-    .features-list { list-style: none; display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1rem; max-width: 800px; margin: 0 auto; }
-    .features-list li { background: #e9d8a6; padding: 1rem; border-radius: 4px; text-align: center; }
-    .about p, .contact p { max-width: 800px; margin: 0 auto 1rem; }
-    footer { background: #001219; color: #fff; text-align: center; padding: 1rem; }
-    footer a { color: #94d2bd; text-decoration: none; }
-    footer a:hover { text-decoration: underline; }
-
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.6;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(135deg, #0557a5, #00c2ff);
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
+      animation: fadeInDown 1.2s ease-in-out;
+    }
+    header h1 {
+      font-size: 3rem;
+    }
+    nav {
+      background: #004b8d;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #00c2ff;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: auto;
+      animation: fadeIn 1s ease;
+    }
+    section h2 {
+      font-size: 2rem;
+      color: #004b8d;
+      margin-bottom: 20px;
+    }
+    .features, .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+      animation: zoomIn 0.6s ease-in-out;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      animation: bounce 0.4s ease;
+    }
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 6px;
+      margin-bottom: 15px;
+    }
+    footer {
+      background: #004b8d;
+      color: white;
+      text-align: center;
+      padding: 30px 20px;
+      font-size: 0.9rem;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes zoomIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+    @keyframes bounce {
+      0% { transform: translateY(-5px); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(-5px); }
+    }
     @media (max-width: 768px) {
-      nav { flex-wrap: wrap; }
-      .nav-toggle-label { display: block; }
-      .nav-menu { display: none; width: 100%; flex-direction: column; }
-      #nav-toggle:checked + .nav-toggle-label + .nav-menu { display: flex; }
-      .nav-menu li { text-align: center; }
-      .hero { height: auto; padding: 4rem 1rem; }
-      .hero h1 { font-size: 2rem; }
+      header h1 { font-size: 2rem; }
+      nav { font-size: 0.9rem; }
     }
   </style>
 </head>
 <body>
-<header>
+  <header>
+    <h1>Welcome to AiroPay</h1>
+    <p>Your smart way to send, spend & save</p>
+  </header>
+
   <nav>
-    <div class="logo">AiroPay</div>
-    <input type="checkbox" id="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label">
-      <span></span>
-    </label>
-    <ul class="nav-menu">
-      <li><a href="#hero">Home</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#features">Features</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <a href="#about">About</a>
+    <a href="#features">Features</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
   </nav>
-</header>
-<main>
-  <section id="hero" class="hero">
-    <div class="hero-content">
-      <h1>Effortlessly Streamline Your Business Payments</h1>
-      <p>We help you with all banking integrations and connections, enabling transactions from your application or device at super-fast speed, securely and with no hidden charges...</p>
-      <a href="#contact" class="btn">Get Started</a>
-    </div>
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>AiroPay is a secure and innovative payment platform designed to make your transactions simple and smart. Whether you’re sending money internationally or paying bills locally, AiroPay provides fast and reliable service from your phone.</p>
   </section>
-  <section id="services" class="services">
-    <h2>Our Services</h2>
-    <div class="service-container">
-      <div class="service">
-        <img src="https://images.pexels.com/photos/33045170/pexels-photo-33045170.jpeg" alt="...">
-        <h3>Banking Integration</h3>
-        <p>Seamlessly integrate with banks...</p>
-      </div>
-      <div class="service">
-        <img src="https://images.pexels.com/photos/30572289/pexels-photo-30572289.jpeg" alt="...">
-        <h3>Fintech Solutions</h3>
-        <p>Access services like bill payments...</p>
-      </div>
-    </div>
-  </section>
-  <section id="features" class="features">
+
+  <section id="features">
     <h2>Platform Features</h2>
-    <ul class="features-list">
-      <li>API-First Architecture</li>
-      <li>Real-Time Transaction Processing</li>
-    </ul>
+    <div class="features">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1573164713988-8665fc963095" alt="International Transfers">
+        <h3>International Transfers</h3>
+        <p>Send money globally with ease and excellent exchange rates.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1603791440384-56cd371ee9a7" alt="Mobile Top-Up">
+        <h3>Mobile Top-Up</h3>
+        <p>Recharge your mobile instantly, anytime, anywhere.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e" alt="Utility Payments">
+        <h3>Utility Payments</h3>
+        <p>Pay electricity, water, and other bills directly from your phone.</p>
+      </div>
+    </div>
   </section>
-  <section id="about" class="about">
-    <h2>About AiroPay</h2>
-    <p>AiroPay Technologies is a Dubai-based FinTech platform...</p>
+
+  <section id="services">
+    <h2>What We Offer</h2>
+    <div class="services">
+      <div class="card">
+        <img src="https://picsum.photos/id/1011/600/400" alt="Secure Transactions">
+        <h3>Secure Transactions</h3>
+        <p>Advanced security protocols ensure your data and money are always safe.</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/id/1012/600/400" alt="Customer Support">
+        <h3>Customer Support</h3>
+        <p>We’re here to help 24/7 with any issues or questions.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1598327105666-5b89351aff97" alt="Mobile App">
+        <h3>Mobile App</h3>
+        <p>Our user-friendly app is available on Android and iOS.</p>
+      </div>
+    </div>
   </section>
-  <section id="contact" class="contact">
+
+  <section id="contact">
     <h2>Contact Us</h2>
-    <p><strong>Email:</strong> <a href="mailto:support@airopay.com">support@airopay.com</a></p>
-    <p><strong>Phone:</strong> +971 4 577 2687</p>
-    <p><strong>Address:</strong> DIFC, Dubai, UAE</p>
+    <p>Email: support@airopay.ae</p>
+    <p>Phone: +971 4 123 4567</p>
+    <p>Location: Dubai, United Arab Emirates</p>
   </section>
-</main>
-<footer>
-  <p>&copy; 2025 AiroPay Ltd. All rights reserved.</p>
-  <p><a href="#">Terms of Service</a> | <a href="#">Privacy Policy</a></p>
-</footer>
-<script>
-  document.querySelectorAll('nav .nav-menu a').forEach(link => {
-    link.addEventListener('click', function(event) {
-      event.preventDefault();
-      const targetId = this.getAttribute('href');
-      const targetElement = document.querySelector(targetId);
-      if (targetElement) {
-        const headerOffset = document.querySelector('header').offsetHeight;
-        const elementPosition = targetElement.getBoundingClientRect().top;
-        const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
-        window.scrollTo({ top: offsetPosition, behavior: 'smooth' });
-      }
-      document.getElementById('nav-toggle').checked = false;
+
+  <footer>
+    <p>&copy; 2025 AiroPay. All rights reserved.</p>
+  </footer>
+
+  <script>
+    // Smooth Scroll on Nav Clicks
+    document.querySelectorAll('nav a').forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
     });
-  });
-</script>
+  </script>
 </body>
 </html>
